--- a/Homework 1/Homework1.ipynb
+++ b/Homework 1/Homework1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -33,11 +33,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(233, 5)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.shape"
    ]
@@ -51,11 +62,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "biosex         object\n",
+       "height_in     float64\n",
+       "weight_lbs    float64\n",
+       "age_yr        float64\n",
+       "ed_cmplt       object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.dtypes"
    ]
@@ -69,11 +96,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FEMALE    119\n",
+       "MALE      114\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.biosex.value_counts()"
    ]
@@ -87,11 +127,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MA            55\n",
+       "College4YR    51\n",
+       "College2YR    51\n",
+       "HS            39\n",
+       "PhD           37\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.ed_cmplt.value_counts()"
    ]
@@ -105,11 +161,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "Int64Index([0, 71, 151, 202, 215, 221], dtype='int64')\n"
+     ]
+    }
+   ],
    "source": [
     "# Since r is 1 based and Python is 0 based, the indexes will differ by 1\n",
     "index = df.query('height_in > 72').index\n",
@@ -126,11 +191,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ed_cmplt\n",
+       "College2YR    20.011765\n",
+       "College4YR    23.141176\n",
+       "HS            24.802564\n",
+       "MA            25.101818\n",
+       "PhD           29.837838\n",
+       "Name: age_yr, dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.groupby('ed_cmplt').age_yr.mean()"
    ]
@@ -144,11 +226,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "biosex  ed_cmplt  \n",
+       "FEMALE  College2YR    19.978947\n",
+       "        College4YR    23.083784\n",
+       "        HS            25.633333\n",
+       "        MA            25.064865\n",
+       "        PhD           30.017647\n",
+       "MALE    College2YR    20.031250\n",
+       "        College4YR    23.292857\n",
+       "        HS            24.553333\n",
+       "        MA            25.177778\n",
+       "        PhD           29.685000\n",
+       "Name: age_yr, dtype: float64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.groupby(('biosex', 'ed_cmplt')).age_yr.mean()"
    ]
@@ -166,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -184,11 +288,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "biosex\n",
+       "FEMALE    22.717633\n",
+       "MALE      22.734941\n",
+       "Name: bmi, dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.groupby('biosex').bmi.mean()"
    ]
@@ -202,11 +320,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "biosex             \n",
+       "FEMALE  normal         91\n",
+       "        overweight     23\n",
+       "        underweight     5\n",
+       "MALE    normal         93\n",
+       "        overweight     16\n",
+       "        underweight     4\n",
+       "        obese           1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def bmi_category(bmi):\n",
     "    if bmi < 18.5:\n",
