minor changes to hw1

--- a/Homework 1/Homework1.ipynb
+++ b/Homework 1/Homework1.ipynb
@@ -19,7 +19,6 @@
     "# Import the pandas module\n",
     "import pandas as pd\n",
     "\n",
-    "\n",
     "# Read in the data\n",
     "df = pd.read_csv('HW01Data.csv')"
    ]
@@ -39,18 +38,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(233, 5)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The data set has 233 rows and 5 columns.\n"
+     ]
     }
    ],
    "source": [
-    "df.shape"
+    "print('The data set has {0[0]} rows and {0[1]} columns.'.format(df.shape))"
    ]
   },
   {
@@ -91,6 +87,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The $\\mbox{biosex}$ and $\\mbox{ed_cmplt}$ columns are strings, and the $\\mbox{height_in}$, $\\mbox{weight_lbs}$, and $\\mbox{age_yr}$ columns are floats.\n",
+    "\n",
     "#### 3. How many participants were female? How many were male?"
    ]
   },
@@ -170,16 +168,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n",
-      "Int64Index([0, 71, 151, 202, 215, 221], dtype='int64')\n"
+      "There are 6 males taller than 72 in.\n",
+      "Their row numbers are [0, 71, 151, 202, 215, 221].\n"
      ]
     }
    ],
    "source": [
-    "# Since r is 1 based and Python is 0 based, the indexes will differ by 1\n",
-    "index = df.query('height_in > 72').index\n",
-    "print(len(index))\n",
-    "print(index)"
+    "# Since R is 1 based and Python is 0 based, the indexes will differ by 1\n",
+    "index = df.query('height_in > 72').index.tolist()\n",
+    "print('There are {} males taller than 72 in.'.format(len(index)))\n",
+    "print('Their row numbers are {}.'.format(index))"
    ]
   },
   {
@@ -329,11 +327,11 @@
      "data": {
       "text/plain": [
        "biosex             \n",
-       "FEMALE  normal         91\n",
-       "        overweight     23\n",
+       "FEMALE  normal         92\n",
+       "        overweight     22\n",
        "        underweight     5\n",
-       "MALE    normal         93\n",
-       "        overweight     16\n",
+       "MALE    normal         94\n",
+       "        overweight     15\n",
        "        underweight     4\n",
        "        obese           1\n",
        "dtype: int64"
@@ -357,7 +355,10 @@
     "\n",
     "    return category\n",
     "\n",
-    "df['weight_status'] = df.bmi.apply(bmi_category)\n",
+    "# Round bmi to 1 decimal place and categorize\n",
+    "df['weight_status'] = df.bmi.round(decimals=1).apply(bmi_category)\n",
+    "\n",
+    "# Count how many of each gender fall into each weight status category\n",
     "df.groupby('biosex').weight_status.value_counts()"
    ]
   }
