--- a/Homework 4/homework4.tex
+++ b/Homework 4/homework4.tex
@@ -234,9 +234,9 @@ For intermediary calculations (e.g., mean and sd) round to four decimal places. 
 
 Imagine that the common house fly lives for an average (mu) of 21 days. After some selective breeding, you have a small sample (N = 10) of specially bred flies that you think had longer than average lives compared to the common fly. Use the data below to test this. Report your conclusion and explain what this means.
 
-Lifespan of Mutant flies (days) = {27, 25, 20, 25, 23, 21, 27, 25, 25, 22}
+Lifespan of Mutant flies (days) = \{27, 25, 20, 25, 23, 21, 27, 25, 25, 22\} \\
 
-To solve this problem, we define two hypotheses: $H_0: \mu = 21$, $H_1: \mu \neq 21$. Alpha level is chosen as $\alpha = .05$. Results will be significant if the sample mean falls in either extreme $.025$ of all possible results. $\nu = N - 1 = 9$; $Q = .025$; $t = 2.262$. If obtained $t > \abs{2.365}$, reject $H_0$.
+To solve this problem, we define two hypotheses: $H_0: \mu = 21$, $H_1: \mu \neq 21$. Alpha level is chosen as $\alpha = .05$. Results will be significant if the sample mean falls in either extreme $.025$ of all possible results. $\nu = N - 1 = 9$; $Q = .025$; $t = 2.262$. If obtained $t > \abs{2.262}$, reject $H_0$.
 
 \begin{equation*}
 \begin{split}
@@ -246,32 +246,64 @@ s^2 & = \frac{1}{N-1} \sum_{i=1}^N (x_i - \overline{x})^2 \\
     & = \frac{1}{9} [(27-24)^2 + (25-24)^2 + (20-24)^2 + (25-24)^2 + (23-24)^2 \\
     & + (21-24)^2 + (27-24)^2 + (25-24)^2 + (25-24)^2 + (22-24)^2] \\
     & = 5.7778 \\
-s & = \sqrt{5.7778} = 2.4037
-\end{split}
-\end{equation*}
-\begin{equation*}
-\begin{split}
+s & = \sqrt{5.7778} = 2.4037\\
+%
 t & = \frac{\left[ \overline{x} - \mu \right]}{s/\sqrt{N}} \\
   & = \frac{24 - 21}{2.4037/\sqrt{10}} \\
-  & = 12.4808
-\end{split}
-\end{equation*}
-\begin{equation*}
-\begin{split}
+  & = 12.4808\\
+%
 SE & = \frac{s}{\sqrt{N}} = \frac{2.4037}{\sqrt{10}} = 0.7601 \\
-\text{Upper 95\%} & = \bar{x} + (SE \times 1.96) = 24.7601 \\
-\text{Lower 95\%} & = \bar{x} - (SE \times 1.96) = 23.2399
+\text{Upper 95\%} & = \bar{x} + (SE \times 1.96) = 25.4898 \\
+\text{Lower 95\%} & = \bar{x} - (SE \times 1.96) = 22.5102
 \end{split}
 \end{equation*}
 
-Since $t = 12.4808 > 2.365$, we reject the null hypothesis $H_0$. We conclude that the specially bred flies have longer than average lives compared to the common fly.
+The flies in our sample live an average of $24.0000 \pm 0.7601$ days. Since $t = 12.4808 > 2.365$, we reject the null hypothesis $H_0$. We conclude that the specially bred flies have longer than average lives compared to the common fly.
 
 \problem{}
 Now imagine that, in addition to your immortal fly project, you have another selective breeding program where you are trying to breed flies that have much shorter life spans. You want to see if they are dying faster than your flies bred to have a longer life span. Use the data below to test this. Report your conclusion and explain what this means.
 
-Lifespan of Mutant flies (days) = {27, 25, 20, 25, 23, 21, 27, 25, 25, 22}
+Lifespan of Mutant flies (days) = \{27, 25, 20, 25, 23, 21, 27, 25, 25, 22\}
 
-Lifespan of Short-lived flies (days) = {24, 23, 19, 21, 22, 20, 25, 27, 21, 22}
+Lifespan of Short-lived flies (days) = \{24, 23, 19, 21, 22, 20, 25, 27, 21, 22\} \\
+
+To solve this problem, we define two hypotheses: $H_0: \mu_{m} - \mu_{sl} = 0$, $H_1: \mu_{m} - \mu_{sl} \neq 0$. Alpha level is chosen as $\alpha = .05$. Results will be significant if the sample mean falls in either extreme $.025$ of all possible results. $\nu = N_1 + N_2 - 2 = 18$; $Q = .025$; $t = 2.101$. If obtained $t > \abs{2.101}$, reject $H_0$.
+
+From above, we know that $\overline{x}_m = 24.0000$ and $s_m = 2.4037$.
+
+\begin{equation*}
+\begin{split}
+\overline{x}_{sl} & = \frac{24 + 23 + 19 + 21 + 22 + 20 + 25 + 27 + 21 + 22}{10} \\
+             & = 22.4000 \\
+s^2_{sl} & = \frac{1}{N-1} \sum_{i=1}^N (x_i - \overline{x})^2 \\
+    & = \frac{1}{9} [(24-22.4)^2 + (23-22.4)^2 + (19-22.4)^2 + (21-22.4)^2 + (22-22.4)^2  \\
+    & + (20-22.4)^2 + (25-22.4)^2 + (27-22.4)^2 + (21-22.4)^2 + (22-22.4)^2] \\
+    & = 5.8222 \\
+s_{sl} & = \sqrt{5.8222} = 2.4129\\
+% \end{split}
+% \end{equation*}
+% \begin{equation*}
+% \begin{split}
+\mbox{est.} \sigma_{diff} & = \sqrt{\frac{(n_m-1)s^2_m + (n_{sl}-1)s^2_{sl}}{n_m + n_{sl} - 2} \left( \frac{n_m + n_{sl}}{n_m n_{sl}} \right)} \\
+& = \sqrt{\frac{(10-1)5.7778 + (10-1)5.8222}{10 + 10 - 2} \left( \frac{10 + 10}{10*10} \right)} \\
+& = 1.0770\\
+% \end{split}
+% \end{equation*}
+% \begin{equation*}
+% \begin{split}
+t & = \frac{\left( \overline{x}_m - \overline{x}_{sl} \right)}{\mbox{est.} \sigma_{diff}} \\
+  & = \frac{24 - 22.4}{1.0770} \\
+  & = 1.4856\\
+% \end{split}
+% \end{equation*}
+% \begin{equation*}
+% \begin{split}
+\mbox{95\% CI} & = (\overline{x}_m - \overline{x}_{sl}) \pm t_{(\alpha/2;\nu)} (\mbox{est.} \sigma_{diff}) \\
+& = 1.6 \pm (2.101) (1.0770) = (-0.6628,3.8628)
+\end{split}
+\end{equation*}
+
+Since $t = 1.4856 < 2.101$, given $\alpha = .05$, $H_0$ cannot be rejected. The $p$ is .95 that the true difference between $\mu_m – \mu_{sl}$ is contained in this $\mbox{95\% CI}$ interval.
 
 \problem{}
 It just so happens that you recall an important detail about these fly experiments. It turns out that, to control for environment, the flies were assigned to live in the same cages for the duration of their lives. That is Fly 1 of the Mutant Flies and Short-lived flies lived in the same enclosure, as did Fly 2 of the Mutant Flies and Short-lived Flies, and so on. This suggests that each pair of flies had some common factors and that the samples are not actually independent. Given this information, conduct a second test of differences between the two samples. Report your conclusion and explain what this means.
